--- a/index.ipynb
+++ b/index.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = sqlite3.Connection('data.sqlite')\n",
-    "cur = conn.cursor()"
+    "c = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('officeCode', None, None, None, None, None, None),\n",
+       " ('city', None, None, None, None, None, None),\n",
+       " ('phone', None, None, None, None, None, None),\n",
+       " ('addressLine1', None, None, None, None, None, None),\n",
+       " ('addressLine2', None, None, None, None, None, None),\n",
+       " ('state', None, None, None, None, None, None),\n",
+       " ('country', None, None, None, None, None, None),\n",
+       " ('postalCode', None, None, None, None, None, None),\n",
+       " ('territory', None, None, None, None, None, None))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute('''select * from offices''')\n",
+    "c.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('employeeNumber', None, None, None, None, None, None),\n",
+       " ('lastName', None, None, None, None, None, None),\n",
+       " ('firstName', None, None, None, None, None, None),\n",
+       " ('extension', None, None, None, None, None, None),\n",
+       " ('email', None, None, None, None, None, None),\n",
+       " ('officeCode', None, None, None, None, None, None),\n",
+       " ('reportsTo', None, None, None, None, None, None),\n",
+       " ('jobTitle', None, None, None, None, None, None))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute('''select * from employees''').description"
    ]
   },
   {
@@ -68,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -135,22 +191,22 @@
        "4         London                      2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Here we join the offices and employees tables in order to count the number of employees per city.\n",
-    "cur.execute(\"\"\"select city,\n",
+    "c.execute(\"\"\"select city,\n",
     "                      count(employeeNumber)\n",
     "                      from offices\n",
     "                      join employees\n",
     "                      using(officeCode)\n",
     "                      group by city\n",
     "                      order by count(employeeNumber) desc;\"\"\")\n",
-    "df = pd.DataFrame(cur.fetchall())\n",
-    "df.columns = [x[0] for x in cur.description]\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
     "df.head()"
    ]
   },
@@ -166,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -233,21 +289,21 @@
        "4         London             2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cur.execute(\"\"\"select city,\n",
+    "c.execute(\"\"\"select city,\n",
     "                      count(employeeNumber) as numEmployees\n",
     "                      from offices\n",
     "                      join employees\n",
     "                      using(officeCode)\n",
     "                      group by 1\n",
     "                      order by numEmployees desc;\"\"\")\n",
-    "df = pd.DataFrame(cur.fetchall())\n",
-    "df.columns = [x[0] for x in cur.description]\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
     "df.head()"
    ]
   },
@@ -266,7 +322,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('customerNumber', None, None, None, None, None, None),\n",
+       " ('customerName', None, None, None, None, None, None),\n",
+       " ('contactLastName', None, None, None, None, None, None),\n",
+       " ('contactFirstName', None, None, None, None, None, None),\n",
+       " ('phone', None, None, None, None, None, None),\n",
+       " ('addressLine1', None, None, None, None, None, None),\n",
+       " ('addressLine2', None, None, None, None, None, None),\n",
+       " ('city', None, None, None, None, None, None),\n",
+       " ('state', None, None, None, None, None, None),\n",
+       " ('postalCode', None, None, None, None, None, None),\n",
+       " ('country', None, None, None, None, None, None),\n",
+       " ('salesRepEmployeeNumber', None, None, None, None, None, None),\n",
+       " ('creditLimit', None, None, None, None, None, None))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute(\"\"\"select * from customers\"\"\").description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('customerNumber', None, None, None, None, None, None),\n",
+       " ('checkNumber', None, None, None, None, None, None),\n",
+       " ('paymentDate', None, None, None, None, None, None),\n",
+       " ('amount', None, None, None, None, None, None))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute(\"\"\"select * from payments\"\"\").description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -371,13 +482,13 @@
        "4  39062.757500    156251.03  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cur.execute(\"\"\"select customerName,\n",
+    "c.execute(\"\"\"select customerName,\n",
     "                      count(*) as number_purchases,\n",
     "                      min(amount) as min_purchase,\n",
     "                      max(amount) as max_purchase,\n",
@@ -388,15 +499,15 @@
     "                      using(customerNumber)\n",
     "                      group by 1\n",
     "                      order by sum(amount) desc;\"\"\")\n",
-    "df = pd.DataFrame(cur.fetchall())\n",
-    "df. columns = [i[0] for i in cur.description]\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df. columns = [i[0] for i in c.description]\n",
     "print(len(df))\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +605,7 @@
        "97   3959.300000      7918.60  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
