Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
    ],
    "source": [
     "c.execute(\"\"\"select city,\n",
-    "                      count(employeeNumber) as numEmployees\n",
+    "                      count(employeeNumber) numEmployees\n",
     "                      from offices\n",
     "                      join employees\n",
     "                      using(officeCode)\n",
