Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -482,14 +482,14 @@
        "4  39062.757500    156251.03  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "c.execute(\"\"\"select customerName,\n",
-    "                      count(*) as number_purchases,\n",
+    "                      count(*) number_purchases,\n",
     "                      min(amount) as min_purchase,\n",
     "                      max(amount) as max_purchase,\n",
     "                      avg(amount) as avg_purchase,\n",
